<resources>
    <string name="start_quiz">Start Quiz</string>
    <string name="set_up_quiz">Set up a Quiz</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="twenty">20</string>
    <string name="chose_number">Select number of questions:</string>
    <string name="chose_difficulty">Select difficulty:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="select_categories">Select categories:</string>
    <string name="arts">Arts</string>
    <string name="films">Films</string>
    <string name="food">Food</string>
    <string name="general">General</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="music">Music</string>
    <string name="science">Science</string>
    <string name="society">Society</string>
    <string name="sport">Sport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>